kubernetes-manifests/app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-web-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-web
  template:
    metadata:
      labels:
        app: demo-web
    spec:
      containers:
        - name: demo-appcontainer
          image: docker.io/ritesh1372/demo_app:v1.0.0
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: app-storage
              mountPath: /rails/storage
      volumes:
        - name: app-storage
          emptyDir: {}
