kubernetes-manifests/stateful-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: demo-postgres
spec:
  serviceName: demo-postgres
  replicas: 1
  selector:
    matchLabels:
      app: demo-postgres
  template:
    metadata:
      labels:
        app: demo-postgres
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: db-pvc
      containers:
        - name: demo-postgres
          image: postgres:14.2-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
