kubernetes-manifests/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-web-service
spec:
  selector:
    app: demo-web
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
