kubernetes-manifests/db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-postgres-service
spec:
  selector:
    app: demo-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
